--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,8 @@ a {
 .rotate {
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
-  }
+    padding-left: 30px;
+}
 
 #cert {
     margin-left: 8rem;
