--- a/styles.css
+++ b/styles.css
@@ -89,8 +89,8 @@ a {
 }
 
 .rotate {
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);
+    /* -webkit-transform: rotate(90deg);
+    transform: rotate(90deg); */
     margin-left: 50px;
 }
 
