--- a/styles.css
+++ b/styles.css
@@ -88,10 +88,12 @@ a {
     margin-top: 1rem;
 }
 
-.rotate {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-    padding-left: 50px;
+#rotate {
+    /* -webkit-transform: rotate(180deg);
+    transform: rotate(180deg); */
+    border-radius: 10px;
+    margin-left: 25px;
+    margin-top: 1rem;
 }
 
 #cert {
