--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ a {
     font-size: 20px;
 }
 
-#rotate {
+#rotate, figure {
     /* -webkit-transform: rotate(180deg);
     transform: rotate(180deg); */
     border-radius: 10px;
