--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,68 @@ a {
     color: black;
 }
 
+/* MOBILE RESPONSIVE */
+
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: rgb(179, 179, 219);
+    }
+
+    .container {
+        width: 100%;
+        margin: 0;
+        flex-direction: column;
+        top: auto;
+        left: auto;
+    }
+
+    .navbar {
+        width: 100%;
+        height: auto;
+        overflow: visible;
+        margin: 0px;
+    }
+
+    #aboutheading, #portheading {
+        width: 100%;
+        font-size: 20px;
+        text-align: left;
+        margin: 0px;
+    }
+
+    .Intro {
+        margin: 0px;
+    }
+
+    #FullName {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    #Title, #tech {
+        font-size: 0.5rem;
+        text-align: center;
+    }
+
+    #Me {
+        height: auto;
+        flex-wrap: wrap;
+        margin: 0;
+        width: 100%;
+    }
+
+    .port {
+        margin: 0px;
+        width: 100%;
+    }
+
+    .projects {
+        width: 100%;
+    }
+  }
+
+/* HOME SECTION */ 
+
 .navbar {
     display: flex;
     justify-content: flex-end;
@@ -67,6 +129,8 @@ a {
     color: rgb(33, 68, 224);
 }
 
+/* ABOUT ME SECTION */
+
 #About, #Portfolio {
     margin: auto; 
     border-bottom: 1px solid black;
@@ -107,6 +171,8 @@ figcaption {
     text-align: center;
 }
 
+/* PORTFOLIO SECTION */
+
 #portheading {
     font-size: 3rem;
     width: 800px;
@@ -123,14 +189,22 @@ figcaption {
 .projects {
     border: 1px solid black;
     border-radius: 10%;
-    width: 270px; 
+    width: 273px; 
     margin: 10px;
+    margin-left: 15px;
+    background-color: white;
+    /* margin: auto; */
+}
+
+.projects:hover {
+    background-color: #CCC;
 }
 
 .port {
-    width: 800px;
+    /* width: 800px; */
     display: flex;
-    margin-left: 20px;
+    margin: auto;
+    flex-wrap: wrap;
 }
 
 .projtitle {
