--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ a {
     }
 
     #FullName {
-        font-size: 1rem;
+        font-size: 0.5rem;
         text-align: center;
     }
 
@@ -62,6 +62,7 @@ a {
         flex-wrap: wrap;
         margin: 0;
         width: 100%;
+        font-size: 15px;
     }
 
     .port {
