--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,7 @@ a {
     /* display: flex;
     flex-direction: column; */
     margin: auto;
+    margin: 20px;
     /* width: 800px; */
     margin-top: 1rem;
     font-size: 18px;
@@ -169,6 +170,7 @@ a {
 
 #rotate {
     margin-left: 10px;
+    margin-top: 1rem;
 }
 
 #adv {
