--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ html {box-sizing:border-box;} *, *::before, *::after {box-sizing: inherit}
 
 body {
     background-color: rgb(179, 179, 219);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .container {
@@ -93,6 +94,10 @@ a {
     margin: 10px;    
 }
 
+.navbar a:hover {
+    color: lightyellow;
+}
+
 .Intro {
     margin-top: 120px;
     margin-bottom: 0px;
@@ -164,7 +169,7 @@ a {
     margin: 20px;
     /* width: 800px; */
     margin-top: 1rem;
-    font-size: 18px;
+    font-size: 20px;
     justify-content: center;
 }
 
@@ -174,7 +179,8 @@ a {
 }
 
 #adv {
-    text-align: end;
+    text-align: center;
+    font-size: 1.5rem;
 }
 
 #rotate{
@@ -198,33 +204,66 @@ a {
     margin-bottom: 50px;
 }
 
-/* #Portfolio {
+.cards {
     display: flex;
-} */
+    justify-content: center;
+    flex-wrap: wrap;
+}
 
 .projects {
     border: 1px solid black;
     border-radius: 10%;
-    width: 273px; 
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    transition: all 0.5s ease-in; 
     margin: 10px;
     /* margin: auto; */
     background-color: white;
+    display: flex;
 }
 
 .projects:hover {
     background-color: #CCC;
+    transform: rotateY(180deg);
 }
 
 .port {
     /* width: 800px; */
     display: flex;
-    /* margin: 10px; */
-    justify-content: center;
-    flex-wrap: wrap;
+    margin: 10px;
+    /* justify-content: center;
+    flex-wrap: wrap; */
+    position: relative;
+    width: 273px;
+    height: 300px;
 }
+
+.front {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+ 
+}
+
+.back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
+    text-align: center;
+    margin-top: 100px;
+    font-size: 18px;
+}
+
 
 .projtitle {
     text-align: center;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 #pic {
@@ -234,16 +273,6 @@ a {
     width: 250px;
     height: 200px;
     border-radius: 10%;
-}
-
-/* .projlink {
-    display: flex;
-    justify-content: space-between;
-    margin: 10px;
-} */
-
-#gh {
-    padding-left: 20px;
 }
 
 footer {
