--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ body {
     background-color: rgb(179, 179, 219);
 }
 
+:root {
+    font-size: 20px;
+}
+
 .container {
     width: 1200px;
     margin: auto;
@@ -12,6 +16,10 @@ body {
 a {
     text-decoration: none;
     color: black;
+}
+
+.heart {
+    color: darkviolet; 
 }
 
 /* MOBILE RESPONSIVE */
@@ -48,15 +56,15 @@ a {
         font-size: 15px;
     }
 
-    /* #FullName {
-        font-size: 10px;
+    #FullName {
+        font-size: 15px;
         text-align: center;
     }
 
     #Title, #tech {
         font-size: 10px;
         text-align: center;
-    } */
+    }
 
     #About, #Portfolio {
         /* width: 100%; */
@@ -105,14 +113,14 @@ a {
 }
 
 #FullName {
-    font-size: 4rem;
+    font-size: 3rem;
     text-align: center;
 }
 
 #Title {
     text-align: center;
     font-style: italic;
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 #tech {
@@ -301,6 +309,7 @@ footer {
     height: 23px;
     text-align: center;
     border-radius: 10%;
+
 }
 
 .resume {
