--- a/styles.css
+++ b/styles.css
@@ -11,167 +11,167 @@ https://coolors.co/f7fff7-343434-2f3061-ffe66d-a1c6d7
 /* Global styles
 ------------------------------------*/
 html {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 *,
 *:before,
 *:after {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
-	color: #343434;
-	margin: 0;
-	padding: 0;
-	font-family: 'Montserrat', sans-serif;
-	font-size: 15px;
-	line-height: 1.5;
+  color: #343434;
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+  line-height: 1.5;
 }
 img {
-	width: 150px;
+  width: 150px;
 }
 a {
-	color: #ffe66d;
+  color: #ffe66d;
 }
 a:hover {
-	text-decoration: none;
+  text-decoration: none;
 }
 h1,
 h2 {
-	font-family: 'Caveat', cursive;
-	font-weight: 400;
-	margin: 0;
+  font-family: "Caveat", cursive;
+  font-weight: 400;
+  margin: 0;
 }
 h1 {
-	font-size: 100px;
-	line-height: 1;
+  font-size: 100px;
+  line-height: 1;
 }
 h2 {
-	font-size: 45px;
+  font-size: 45px;
 }
 
 .content-wrap {
-	max-width: 800px;
-	width: 85%;
-	margin: 0 auto;
-	padding: 60px 0;
+  max-width: 800px;
+  width: 85%;
+  margin: 0 auto;
+  padding: 60px 0;
 }
 .item-details h3 {
-	margin-bottom: 0;
+  margin-bottom: 0;
 }
 .item-details h3 + p {
-	font-style: italic;
+  font-style: italic;
 }
 .item-details h3 ~ p {
-	margin: 0;
+  margin: 0;
 }
 .divider > section {
-	overflow: hidden;
-	border-bottom: 1px dashed #343434;
-	padding: 25px 0;
+  overflow: hidden;
+  border-bottom: 1px dashed #343434;
+  padding: 25px 0;
 }
 .divider > section:last-of-type {
-	border: none;
+  border: none;
 }
 
 /* Profile
   ------------------------------------*/
 header {
-	background: #2f3061;
-	color: #f7fff7;
+  background: #2f3061;
+  color: #f7fff7;
 }
 
 /* Projects
   ------------------------------------*/
 .projects {
-	background: #f7fff7;
+  background: #f7fff7;
 }
 .projects a {
-	color: #2f3061;
+  color: #2f3061;
 }
 .projects .btn {
-	background: #2f3061;
-	color: #f7fff7;
-	text-decoration: none;
-	padding: 8px;
-	border-radius: 4px;
-	display: inline-block;
+  background: #2f3061;
+  color: #f7fff7;
+  text-decoration: none;
+  padding: 8px;
+  border-radius: 4px;
+  display: inline-block;
 }
 .projects .btn:hover {
-	background: rgba(47, 48, 97, 80%);
+  background: rgba(47, 48, 97, 80%);
 }
 .project-item h3 {
-	margin-top: 0;
+  margin-top: 0;
 }
 
 /* Work Experience
   ------------------------------------*/
 .work-experience {
-	background: #a1c6d7;
+  background: #a1c6d7;
 }
 
 /* Education
   ------------------------------------*/
 .education {
-	background-image: url(../images/joanna-kosinska-unsplash.jpg);
-	background-position: top right;
-	background-size: cover;
-	padding-bottom: 100px;
+  background-image: url(../images/joanna-kosinska-unsplash.jpg);
+  background-position: top right;
+  background-size: cover;
+  padding-bottom: 100px;
 }
 .education p {
-	width: 60%;
+  width: 60%;
 }
 
 /* Contact Info
   ------------------------------------*/
 footer {
-	background: #343434;
-	color: #f7fff7;
+  background: #343434;
+  color: #f7fff7;
 }
 .contact-list {
-	list-style-type: none;
-	padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 .contact-list a {
-	padding: 5px;
-	display: inline-block;
+  padding: 5px;
+  display: inline-block;
 }
 
 /* Responsive
   ------------------------------------*/
 @media screen and (min-width: 750px) {
-	header,
-	footer {
-		text-align: center;
-	}
+  header,
+  footer {
+    text-align: center;
+  }
 
-	.project-item img {
-		float: left;
-		margin-right: 20px;
-	}
+  .project-item img {
+    float: left;
+    margin-right: 20px;
+  }
 
-	.job-item {
-		display: grid;
-		grid-template-columns: 1fr 2fr;
-		column-gap: 20px;
-	}
+  .job-item {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 20px;
+  }
 
-	.contact-list {
-		display: flex;
-		justify-content: center;
-	}
-	.contact-list a {
-		padding: 15px;
-	}
+  .contact-list {
+    display: flex;
+    justify-content: center;
+  }
+  .contact-list a {
+    padding: 15px;
+  }
 }
 
 @media screen and (max-width: 749px) {
-	h1 {
-		font-size: 75px;
-		line-height: 0.9;
-		margin-bottom: 20px;
-	}
-	h2 {
-		line-height: 1;
-	}
+  h1 {
+    font-size: 75px;
+    line-height: 0.9;
+    margin-bottom: 20px;
+  }
+  h2 {
+    line-height: 1;
+  }
 }
